# terminal_artist

./: Cargo.toml  LICENSE  README.md
doc/: algorithm.md
src/: glyphs.rs  lib.rs  main.rs
